k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nextjs-ui
    labels:
        app: nextjs-ui
spec:
    replicas: 1
    revisionHistoryLimit: 3
    selector:
        matchLabels:
            app: nextjs-ui
    template:
        metadata:
            labels:
                app: nextjs-ui
        spec:
            imagePullSecrets:
                - name: scw-registry-secret
            containers:
                - name: nextjs-ui
                  image: rg.fr-par.scw.cloud/good-food-container-registry/nextjs-ui:be16e4bdc1296634bc815f8059d223865a2da53d
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3000
                  resources:
                      requests:
                          memory: "64Mi"
                          cpu: "10m"
                      limits:
                          memory: "128Mi"
                          cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
    name: nextjs-ui
spec:
    selector:
        app: nextjs-ui
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
